--- a/public/index.html
+++ b/public/index.html
@@ -24,15 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-    <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-    <script type="text/javascript">
-    (function() {
-    emailjs.init("4Dn9kY0NrY0d7f6uT");
-    })();
-    </script> -->
-    
-
+    <title>EmilyDSarani</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
